	* Nice FAQish document (README.Debian)
	* pidfile support for background mode

        Cleanups suggested by Steve G <linux_4ever@yahoo.com>:
	* fips.c: declare FIPS data array as const
	* rngd_linux.c: small random_sleep cleanup
	* stats.h, stats.c, rngd_entsource.c: avoid signed/unsigned 
	  conversions
	* rngd_entsource.c, rngtest.c: typecast void pointers 
	  for pointer arithmetric

	Other:
	* rngd.h, rngd.c, rngd_linux.c: precalculate poll timeout
	  on init_kernel_rng.  Now arguments->poll_timeout is an int
	  instead of a double
	* rngd.c, rngtest.c: switch from sscanf to strto* functions for
	  better error handling.  Validate upper bounds of input
	  parameters when needed (to avoid overflows)
	* rngd.c, rngd_linux.c, rngd.8.in: obtain kernel entropy pool
	  size from /proc, and implement percentage-based 
	  --fill-watermark.  Default fill watermark is now 50%
	* rngd.8.in: Add comment about not changing entropy pool size
	  with rngd running
	* rngd.c, rngd_entsource.h, rngd_entsource.c, rngd_linux.h,
	  rngd_linux.c: remove arguments to init_* functions, since they
	  serve no useful purpose (as the modules they init access
	  the arguments struct for other data anyway)
	* rngd.c: call openlog with LOG_PID option
	* rngd_linux.c: use gettimeofday and handle EINTR on poll() so
	  as not to lose track of the random-step timing if we get
	  interrupted
	* rngd.h, rngd.c, rngd_linux.c, rngd.8.in: deprecate --timeout,
	  rename it to --feed-interval (but keep -t short version). Rename
	  poll_timeout to feed_interval in argument struct
	* Makefile.am, rngd_signals.c, rngd_signals.h: add rngd_signals.c/h
	* rngd.h, rngd.c, rngd_linux.c, rngd_entsource.c, rngd_threads.c,
	  rng_threads.h: move signal handling code to rngd_signals.c/h
	* rngd.h, rngd.c, rngd_entsource.c, rngd.8.in: new --rng-timeout
	  option, to timeout the data source (currently only on startup)
	  using the SIGALRM machinery
	* Makefile.am, util.h, util.c: add util.c/h