@@ -38,7 +38,7 @@
 #include "fips.h"
 #include "stats.h"
 
-#define MAX_RNG_BUFFERS 10
+#define MAX_RNG_BUFFERS 1000
 #define STR_BUF_LEN 1024
 
 /* Command line arguments and processing */
